src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-ofT-dhP0.5-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-floating true\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 360, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
